[package]
name = "config-store"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/*"]

[dependencies]
toml = { version = "0.8.20", optional = true }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
tokio = { version = "1.44.1", features = ["fs"], optional = true }
ciborium = { version = "0.2.2", optional = true }

[features]
tokio = ["dep:tokio"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
config-store = { path = ".", default-features = false, features = [
	"toml",
	"tokio",
] }
