[package]
name = "yaml-async"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
easy-config-store = { path = "../..", default-features = false, features = [
	"yaml",
	"tokio",
] }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
